Bug 307753 - Publications do not allow multiple local files
Summary: Publications do not allow multiple local files
Status: RESOLVED FIXED
Alias: None
Product: conquirere
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Jörg Ehrichs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-02 21:27 UTC by Luis Silva
Modified: 2012-10-02 21:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Patch correcting this bug. (938 bytes, patch)
2012-10-02 21:29 UTC, Luis Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luis Silva 2012-10-02 21:27:58 UTC
There is a bug preventing multiple files to be associated with a publication.
The attached patch corrects this bug.

Reproducible: Always
Comment 1 Luis Silva 2012-10-02 21:29:07 UTC
Created attachment 74308 [details]
Patch correcting this bug.
Comment 2 Jörg Ehrichs 2012-10-02 21:47:10 UTC
Git commit 8cb60309114ae9103dbb33b0148c2bdb575d2fb4 by Jörg Ehrichs, on behalf of Luis Silva.
Committed on 02/10/2012 at 23:21.
Pushed by jehrichs into branch 'master'.

Correct situation where several local files refer to the same publication.

M  +1    -1    src/nbibio/pipe/nepomuktovariantpipe.cpp

http://commits.kde.org/conquirere/8cb60309114ae9103dbb33b0148c2bdb575d2fb4