Correct situation where several local files refer to the same publication.

BUG: 307753